# Pokeagent-GameBoy

./: .gitignore  CHANGELOG_V2.md  LICENSE  LLM_SETUP.md  README.md  README_ENSEMBLE.md  config.py  gbc_ai_agent.py  llm_performance_config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
agent/: __init__.py  agent.py  emulator.py  environment.py  llm.py  memory.py  model.py  trainer.py
docs/: README.md
pokemon_ai_saves_Pokemon Red/: game_state.state  stats.json  stats_ppo.json
roms/: Pokemon Red.gb.ram
scripts/: check_improvements.py
src/: __main__.py  act.py  action_filter.py  advanced_features.py  ant.py  anti_loop.py  cfg.py  config.py  errors.py  hrs.py  hyp.py  hyperparameters.py  int4_quantization.py  llm.py  llm_integration.py  mai.py  main.py  mem.py  memory_reader.py  mod.py  models.py  moe.py  moe_router.py  ocr_reader.py  screen_regions.py  simple_world_model.py  state_detector.py  trajectory_buffer.py  trj.py  uti.py  utils.py  vis.py  vision_encoder.py  wld.py  world_model.py
tests/: __init__.py  test_anti_loop.py  test_basic.py  test_config.py  test_memory_reader.py  test_vision_encoder.py
